--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       </div>
     </div>
     <div class="buttons">
-      <div class="back"><a href="../index.html">Back</a>
-      </div>
+      <div class="home"><a href="../index.html">Home</a></div>
+      <div class="back"><a href="../index.html">Back</a></div>
       <div class="next"><a href="../results_summary_component/index.html">Next</a></div>
     </div>
   </body>
